<resources>
    <string name="app_name">PopularMovies</string>
    <string name="sort_by">Sort by</string>
    <string name="most_popular">Most popular</string>
    <string name="top_rated">Top rated</string>
    <string name="error_string">Error</string>
    <string name="poster_description">poster</string>
    <string name="synopsis">Synopsis</string>
    <string name="movie_poster_image_description">Movie poster</string>
    <string name="rating">Rating</string>
    <string name="release_date">Release date</string>
    <string name="watch_trailer">Watch trailer</string>
    <string name="reviews_label">Reviews</string>
    <string name="trailers_label">Trailers</string>
    <string name="hash_tag">#PopularMovies #Hruntek</string>
    <string name="action_share">Share</string>
    <string name="action_favorite">Favorite</string>
</resources>
