<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/movie_title_detail"
                style="@style/TitleLabel"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Movie Title"/>

            <ImageView
                android:id="@+id/movie_poster_detail"
                android:layout_width="169dp"
                android:layout_height="202dp"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_poster_image_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_title_detail"
                app:layout_constraintVertical_bias="0.0"
                tools:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/movie_rating_label_detail"
                style="@style/DetailLabel"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/rating"
                app:layout_constraintLeft_toRightOf="@+id/movie_poster_detail"
                app:layout_constraintTop_toTopOf="@+id/movie_poster_detail"
                />

            <TextView
                android:id="@+id/movie_rating_detail"
                style="@style/DetailValue"
                app:layout_constraintLeft_toLeftOf="@+id/movie_rating_label_detail"
                app:layout_constraintTop_toBottomOf="@+id/movie_rating_label_detail"
                tools:text="6.9/10.0"/>

            <TextView
                android:id="@+id/movie_release_date_label_detail"
                style="@style/DetailLabel"
                android:layout_marginTop="40dp"
                android:text="@string/release_date"
                app:layout_constraintLeft_toLeftOf="@+id/movie_rating_detail"
                app:layout_constraintTop_toTopOf="@+id/movie_rating_detail"/>

            <TextView
                android:id="@+id/movie_release_date_detail"
                style="@style/DetailValue"
                app:layout_constraintLeft_toLeftOf="@+id/movie_release_date_label_detail"
                app:layout_constraintTop_toBottomOf="@+id/movie_release_date_label_detail"
                tools:text="30 Jan 2017"/>

            <TextView
                android:id="@+id/movie_plot_synopsis_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_poster_detail"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."/>

            <View
                android:id="@+id/trailers_divider"
                style="@style/Divider"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/movie_plot_synopsis_detail"/>

            <TextView
                android:id="@+id/trailers_label_detail"
                style="@style/DetailLabel"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trailers_divider"
                android:text="@string/trailers_label"/>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailers_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trailers_label_detail"
                />

            <View
                android:id="@+id/reviews_divider"
                style="@style/Divider"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/trailers_detail"/>

            <TextView
                android:id="@+id/reviews_label_detail"
                style="@style/DetailLabel"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reviews_divider"
                android:text="@string/reviews_label"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reviews_label_detail"
                app:layout_constraintBottom_toBottomOf="parent"
                />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
